Update Swagger
